# MarlborgeNet

./: .gitignore  CMakeLists.txt
.github/: README.md
cnc/: CMakeLists.txt  main.cpp
dropper/: CMakeLists.txt  dll.hpp  main.cpp
persistance/: CMakeLists.txt  main.cpp  pragma.h
server/: main.cpp
server/cert/: cert.pem  key.pem
